--- a/templates/users/staff/staff_create.html
+++ b/templates/users/staff/staff_create.html
@@ -1,6 +1,6 @@
 {% extends 'main/base.html' %}
 {% block page_content %}
-    <h1 class="text-center">Create New Staff</h1>
+    <h1 class="text-center">Create New Employee Profile</h1>
     <div class="row">
         <div class="col-lg-6">
             <form method="post" action="{% url 'create staff' user_pk %}">
