--- a/templates/users/staff/staff_delete.html
+++ b/templates/users/staff/staff_delete.html
@@ -26,7 +26,7 @@
                     Department: {{ staff_department }}
                 </div>
 
-                <button class="btn btn-primary mt-2" type="submit">Delete Staff</button>
+                <button class="btn btn-danger mt-2" type="submit">Delete Staff</button>
             </form>
         </div>
         <div class="col-lg-3"></div>
