--- a/templates/users/staff/staff_deleted_list.html
+++ b/templates/users/staff/staff_deleted_list.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 
 {% block page_content %}
-    <h1 class="text-center">Deleted Staff List</h1>
+    <h1 class="text-center">Deleted Employees List</h1>
     <div class="row">
         <div class="col-lg-3"></div>
         {% if all_staff %}
@@ -24,27 +24,52 @@
                     </tr>
                 {% endfor %}
             </table>
-            {% if is_paginated %}
-                <ul class="pagination">
+  {#            Start Pagination#}
+        {% if is_paginated %}
+            <nav aria-label="Page navigation">
+                <ul class="pagination justify-content-center">
                     {% if page_obj.has_previous %}
-                        <li><a href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ page_obj.previous_page_number }}"
+                               aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                        </li>
                     {% else %}
-                        <li class="disabled"><span>&laquo;</span></li>
+                        <li class="page-item disabled">
+                            <a class="page-link" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                        </li>
                     {% endif %}
                     {% for i in paginator.page_range %}
                         {% if page_obj.number == i %}
-                            <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                            <li class="page-item"><a class="page-link">{{ i }}</a></li>
                         {% else %}
-                            <li><a href="?page={{ i }}">{{ i }}</a></li>
+                            <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
                         {% endif %}
                     {% endfor %}
                     {% if page_obj.has_next %}
-                        <li><a href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </li>
                     {% else %}
-                        <li class="disabled"><span>&raquo;</span></li>
+                        <li class="page-item disabled">
+                            <a class="page-link" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </li>
                     {% endif %}
                 </ul>
-            {% endif %}
+            </nav>
+        {% endif %}
+        {#            End of Pagination#}
         {% else %}
             No deleted staff to display
         {% endif %}
