--- a/templates/users/staff/staff_user_create.html
+++ b/templates/users/staff/staff_user_create.html
@@ -1,11 +1,11 @@
 {% extends 'main/base.html' %}
 {% block page_content %}
-    <h1 class="text-center">Create New User for Staff</h1>
+    <h1 class="text-center">Create New User (Employee)</h1>
     <div class="row">
         <div class="col-lg-6">
             <form method="post" action="{% url 'create staff user' %}">
                 {% csrf_token %}
-                {{ form }}
+                {{ form.as_p }}
 
                 <button class="btn btn-primary mt-2" type="submit">Create</button>
             </form>
