--- a/templates/laboratory/department/department_edit.html
+++ b/templates/laboratory/department/department_edit.html
@@ -13,6 +13,6 @@
         </div>
     </div>
     <div class="row">
-        <a href="{% url 'delete department' department.pk %}" class="btn btn-danger mt-2" role="button">Delete Department</a>
+        <a href="{% url 'delete department' department.pk %}" class="btn btn-danger mt-2" role="button">Delete</a>
     </div>
 {% endblock %}
