--- a/templates/laboratory/health_facility/health_facility_create.html
+++ b/templates/laboratory/health_facility/health_facility_create.html
@@ -6,9 +6,9 @@
         <div class="col-lg-6">
             <form method="post" action="{% url 'health facility register' %}">
                 {% csrf_token %}
-                {{ form }}
+                {{ form.as_p }}
 
-                <button class="btn btn-primary mt-2" type="submit">Create Health Facility</button>
+                <button class="btn btn-primary mt-2" type="submit">Create</button>
             </form>
         </div>
         <div class="col-lg-3"></div>
