--- a/templates/laboratory/health_facility/health_facility_delete.html
+++ b/templates/laboratory/health_facility/health_facility_delete.html
@@ -6,9 +6,9 @@
         <div class="col-lg-6">
             <form method="post" action="{% url 'delete health facility' facility.pk %}">
                 {% csrf_token %}
-                {{ form }}
+                {{ form.as_p }}
 
-                <button class="btn btn-primary mt-2" type="submit">Delete Health Facility</button>
+                <button class="btn btn-danger mt-2" type="submit">Delete</button>
             </form>
         </div>
         <div class="col-lg-3"></div>
