--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -26,9 +26,6 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
                 <a class="nav-link" href="{% url 'all analyses' %}">Our analyses <span class="sr-only">(current)</span></a>
             </li>
             {% if user.is_superuser %}
@@ -125,7 +122,21 @@
             <button type="submit" class="btn btn-outline-success my-2 my-sm-0">Search</button>
         </form>
         <br/>
-
+        {% if user.is_authenticated %}
+            {% if user.is_patient %}
+                Welcome {{ user.profile.last_name }}!
+            {% endif %}
+            {% if user.is_physician %}
+                Welcome Dr. {{ user.profile.last_name }}!
+            {% endif %}
+            {% if user.is_staff %}
+                {% if user.is_superuser %}
+                    Welcome admin {{ user.profile.last_name }}!
+                {% else %}
+                    Welcome employee {{ user.profile.last_name }}!
+                {% endif %}
+            {% endif %}
+        {% endif %}
         {% if user.is_authenticated %}
             <a class="nav-link" href="{% url 'logout user' %}">Logout <span class="sr-only">(current)</span></a>
         {% else %}
@@ -162,29 +173,6 @@
                         them with routine diagnostics.
                     </p>
                 </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                {#                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">#}
-                {#                    <!-- Links -->#}
-                {#                    <h6 class="text-uppercase fw-bold mb-4">#}
-                {#                        Products#}
-                {#                    </h6>#}
-                {#                    <p>#}
-                {#                        <a href="#!" class="text-reset">Angular</a>#}
-                {#                    </p>#}
-                {#                    <p>#}
-                {#                        <a href="#!" class="text-reset">React</a>#}
-                {#                    </p>#}
-                {#                    <p>#}
-                {#                        <a href="#!" class="text-reset">Vue</a>#}
-                {#                    </p>#}
-                {#                    <p>#}
-                {#                        <a href="#!" class="text-reset">Laravel</a>#}
-                {#                    </p>#}
-                {#                </div>#}
-                <!-- Grid column -->
-
                 <!-- Grid column -->
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                     <!-- Links -->
