--- a/templates/users/login_page.html
+++ b/templates/users/login_page.html
@@ -8,7 +8,7 @@
             <!-- Login Form -->
             <form method="POST">
                 {% csrf_token %}
-                {{ form }}
+                {{ form.as_p }}
                 <button class="btn btn-primary mt-2" type="submit">Log in</button>
             </form>
             <!-- End Login Form -->
