--- a/templates/laboratory/analysis/analysis_create.html
+++ b/templates/laboratory/analysis/analysis_create.html
@@ -1,15 +1,10 @@
 {% extends 'main/base.html' %}
 {% block page_content %}
-    <h1 class="text-center">Create New Analysis Form</h1>
-    <div class="row">
-        <div class="col-lg-6">
+    <h1 class="text-center">Create New Analysis</h1>
             <form method="post" action="{% url 'create analysis' %}">
                 {% csrf_token %}
-                {{ form }}
+                {{ form.as_p }}
 
                 <button class="btn btn-primary mt-2" type="submit">Create</button>
             </form>
-        </div>
-        <div class="col-lg-3"></div>
-    </div>
 {% endblock %}
