--- a/templates/laboratory/analysis/analysis_edit.html
+++ b/templates/laboratory/analysis/analysis_edit.html
@@ -6,14 +6,13 @@
         <div class="col-lg-6">
             <form method="post" action="{% url 'edit analysis' analysis.pk %}">
                 {% csrf_token %}
-                {{ form }}
+                {{ form.as_p }}
 
                 <button class="btn btn-primary mt-2" type="submit">Edit</button>
+                <p></p>
+                <a href="{% url 'delete analysis' analysis.pk %}" class="btn btn-danger mt-2" role="button">Delete</a>
+                <p></p>
             </form>
         </div>
-        <div class="col-lg-3"></div>
-    </div>
-    <div class="row">
-        <a href="{% url 'delete analysis' analysis.pk %}"> Delete </a>
     </div>
 {% endblock %}
