--- a/templates/laboratory/analysis/analysis_nondeleted_list.html
+++ b/templates/laboratory/analysis/analysis_nondeleted_list.html
@@ -2,6 +2,11 @@
 
 {% block page_content %}
     <h1 class="text-center">Analyses List</h1>
+    <p></p>
+    <div class="d-flex justify-content-center">
+        <a href="{% url 'create analysis' %}" class="btn btn-primary" role="button">Create New Analysis</a>
+    </div>
+    <p></p>
     <div class="row">
         <div class="col-lg-3"></div>
         {% if all_analyses %}
@@ -16,7 +21,9 @@
                     <th scope="col">Turnaround Time [days]</th>
                     <th scope="col">Analysis Fields</th>
                     {% if user.is_authenticated %}
-                        <th scope="col">Detail link</th>
+                        {% if user.is_staff %}
+                            <th scope="col">Details link</th>
+                        {% endif %}
                     {% endif %}
                 </tr>
                 {% for analysis in all_analyses %}
@@ -28,32 +35,59 @@
                         <td>{{ analysis.tat }}</td>
                         <td>{{ analysis.analysis_field.all | unordered_list }}</td>
                         {% if user.is_authenticated %}
-                            <td><a href="{% url 'edit analysis' analysis.pk %}"> Detail </a></td>
+                            {% if user.is_staff %}
+                                <td><a href="{% url 'edit analysis' analysis.pk %}"> Details </a></td>
+                            {% endif %}
                         {% endif %}
                     </tr>
                 {% endfor %}
             </table>
+            {#            Start Pagination#}
             {% if is_paginated %}
-                <ul class="pagination">
-                    {% if page_obj.has_previous %}
-                        <li><a href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
-                    {% else %}
-                        <li class="disabled"><span>&laquo;</span></li>
-                    {% endif %}
-                    {% for i in paginator.page_range %}
-                        {% if page_obj.number == i %}
-                            <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-center">
+                        {% if page_obj.has_previous %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ page_obj.previous_page_number }}"
+                                   aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                            </li>
                         {% else %}
-                            <li><a href="?page={{ i }}">{{ i }}</a></li>
+                            <li class="page-item disabled">
+                                <a class="page-link" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                            </li>
                         {% endif %}
-                    {% endfor %}
-                    {% if page_obj.has_next %}
-                        <li><a href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>
-                    {% else %}
-                        <li class="disabled"><span>&raquo;</span></li>
-                    {% endif %}
-                </ul>
+                        {% for i in paginator.page_range %}
+                            {% if page_obj.number == i %}
+                                <li class="page-item"><a class="page-link">{{ i }}</a></li>
+                            {% else %}
+                                <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                            {% endif %}
+                        {% endfor %}
+                        {% if page_obj.has_next %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </li>
+                        {% else %}
+                            <li class="page-item disabled">
+                                <a class="page-link" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </nav>
             {% endif %}
+            {#            End of Pagination#}
         {% else %}
             No analyses to display!
         {% endif %}
