--- a/templates/laboratory/analysis/analysis_restore.html
+++ b/templates/laboratory/analysis/analysis_restore.html
@@ -1,14 +1,15 @@
 {% extends 'main/base.html' %}
 
 {% block page_content %}
-    <h1 class="text-center">Restore Analysis Form</h1>
+    <h1 class="text-center">Restore Analysis</h1>
     <div class="row">
         <div class="col-lg-6">
             <form method="post" action="{% url 'restore analysis' analysis.pk %}">
                 {% csrf_token %}
                 {{ form }}
-
+                <p></p>
                 <button class="btn btn-primary mt-2" type="submit">Restore</button>
+                <p></p>
             </form>
         </div>
         <div class="col-lg-3"></div>
