--- a/templates/laboratory/analysis_field/analysis_field_edit.html
+++ b/templates/laboratory/analysis_field/analysis_field_edit.html
@@ -6,14 +6,15 @@
         <div class="col-lg-6">
             <form method="post" action="{% url 'edit analysis field' analysis_field.pk %}">
                 {% csrf_token %}
-                {{ form }}
+                {{ form.as_p }}
 
-                <button class="btn btn-primary mt-2" type="submit">Edit Analysis Field</button>
+                <button class="btn btn-primary mt-2" type="submit">Edit</button>
+                <p></p>
+                <a href="{% url  'delete analysis field' analysis_field.pk %}" class="btn btn-danger mt-2"
+                   role="button">Delete</a>
+                <p></p>
             </form>
         </div>
         <div class="col-lg-3"></div>
-    </div>
-    <div class="row">
-        <a href="{% url 'delete analysis field' analysis_field.pk %}"> Delete Analysis Field </a>
     </div>
 {% endblock %}
